Convert tabs and fix links

--- a/versions/latest/modules/en/pages/cluster-deployment/node-requirements.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/node-requirements.adoc
@@ -5,7 +5,7 @@ This page describes the requirements for the Rancher managed Kubernetes clusters
 [NOTE]
 ====
 
-If Rancher is installed on a high-availability Kubernetes cluster, the Rancher server three-node cluster and downstream clusters have different requirements. For Rancher installation requirements, refer to the node requirements in the xref:installation-and-upgrade/requirements/installation-requirements.adoc[installation section.]
+If Rancher is installed on a high-availability Kubernetes cluster, the Rancher server three-node cluster and downstream clusters have different requirements. For Rancher installation requirements, refer to the node requirements in the xref:installation-and-upgrade/requirements/requirements.adoc[installation section.]
 ====
 
 
@@ -49,11 +49,41 @@ When xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Launching Kuber
 ======
 Tab Canal::
 +
-```yaml rancher_kubernetes_engine_config: network: plugin: canal options: canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds flannel_backend_type: vxlan services: kube-controller: extra_args: flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/ ``` 
+--
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  network:
+    plugin: canal
+    options:
+      canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+      flannel_backend_type: vxlan
+
+  services:
+    kube-controller:
+      extra_args:
+        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
+----
+--
 
 Tab Calico::
 +
-```yaml rancher_kubernetes_engine_config: network: plugin: calico options: calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds flannel_backend_type: vxlan services: kube-controller: extra_args: flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/ ```
+--
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  network:
+    plugin: calico
+    options:
+      calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+      flannel_backend_type: vxlan
+
+  services:
+    kube-controller:
+      extra_args:
+        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
+----
+--
 ======
 
 It is also required to enable the Docker service, you can enable the Docker service using the following command:
