--- a/versions/latest/modules/en/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
+++ b/versions/latest/modules/en/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
@@ -37,11 +37,25 @@ To add the environment variable to an existing cluster:
 ======
 Tab RKE2/K3s::
 +
-1. Click **☰ > Cluster Management**. 1. Go to the cluster where you want to add environment variables and click **⋮ > Edit Config**. 1. Click **Agent Environment Vars** under **Cluster configuration**. 1. Click **Add**. 1. Enter the [required environment variables](#required-environment-variables) 1. Click **Save**. 
+--
+. Click *☰ > Cluster Management*.
+. Go to the cluster where you want to add environment variables and click *⋮ > Edit Config*.
+. Click *Agent Environment Vars* under *Cluster configuration*.
+. Click *Add*.
+. Enter the <<_required_environment_variables,required environment variables>>
+. Click *Save*.
+--
 
 Tab RKE::
 +
-1. Click **☰ > Cluster Management**. 1. Go to the cluster where you want to add environment variables and click **⋮ > Edit Config**. 1. Click **Advanced Options**. 1. Click **Add Environment Variable**. 1. Enter the [required environment variables](#required-environment-variables) 1. Click **Save**.
+--
+. Click *☰ > Cluster Management*.
+. Go to the cluster where you want to add environment variables and click *⋮ > Edit Config*.
+. Click *Advanced Options*.
+. Click *Add Environment Variable*.
+. Enter the <<_required_environment_variables,required environment variables>>
+. Click *Save*.
+--
 ======
 
 *Result:* The Fleet agent works behind a proxy.
