--- a/versions/latest/modules/en/pages/security/hardening-guides/rke2/rke2.adoc
+++ b/versions/latest/modules/en/pages/security/hardening-guides/rke2/rke2.adoc
@@ -47,15 +47,30 @@ There are two areas of host-level requirements: kernel parameters and etcd proce
 
 === Ensure `protect-kernel-defaults` is set
 
-[tabs,sync-group-id=k3s-version]
+[tabs,sync-group-id=rke2-version]
 ======
 Tab v1.25 and Newer::
 +
-The `protect-kernel-defaults` is no longer required since CIS benchmark 1.7. 
+--
+The `protect-kernel-defaults` is no longer required since CIS benchmark 1.7.
+--
 
 Tab v1.24 and Older::
 +
-This is a kubelet flag that will cause the kubelet to exit if the required kernel parameters are unset or are set to values that are different from the kubelet's defaults. The `protect-kernel-defaults` flag can be set in the cluster configuration in Rancher. ```yaml spec: rkeConfig: machineSelectorConfig: - config: protect-kernel-defaults: true ```
+--
+This is a kubelet flag that will cause the kubelet to exit if the required kernel parameters are unset or are set to values that are different from the kubelet's defaults.
+
+The `protect-kernel-defaults` flag can be set in the cluster configuration in Rancher.
+
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          protect-kernel-defaults: true
+----
+--
 ======
 
 === Set kernel parameters
@@ -103,11 +118,63 @@ RKE2 always runs with some amount of pod security.
 ======
 Tab v1.25 and Newer::
 +
-On v1.25 and newer, [Pod Security Admissions (PSAs)](https://kubernetes.io/docs/concepts/security/pod-security-admission/) are used for pod security. Below is the minimum necessary configuration needed for hardening RKE2 to pass CIS v1.23 hardened profile `rke2-cis-1.7-hardened` available in Rancher. ```yaml spec: defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted rkeConfig: machineSelectorConfig: - config: profile: cis-1.23 ``` When both the `defaultPodSecurityAdmissionConfigurationTemplateName` and `profile` flags are set, Rancher and RKE2 does the following: 1. Checks that host-level requirements have been met. If they haven't, RKE2 will exit with a fatal error describing the unmet requirements. 2. Applies network policies that allow the cluster to pass associated controls. 3. Configures the Pod Security Admission Controller with the PSA configuration template `rancher-restricted`, to enforce restricted mode in all namespaces, except the ones in the template's exemption list. These namespaces are exempted to allow system pods to run without restrictions, which is required for proper operation of the cluster. :::note If you intend to import an RKE cluster into Rancher, please consult the [documentation](../../psact.md) for how to configure the PSA to exempt Rancher system namespaces. ::: 
+--
+On v1.25 and newer, https://kubernetes.io/docs/concepts/security/pod-security-admission/[Pod Security Admissions (PSAs)] are used for pod security.
+
+Below is the minimum necessary configuration needed for hardening RKE2 to pass CIS v1.23 hardened profile `rke2-cis-1.7-hardened` available in Rancher.
+
+[,yaml]
+----
+spec:
+  defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.23
+----
+
+When both the `defaultPodSecurityAdmissionConfigurationTemplateName` and `profile` flags are set, Rancher and RKE2 does the following:
+
+. Checks that host-level requirements have been met. If they haven't, RKE2 will exit with a fatal error describing the unmet requirements.
+. Applies network policies that allow the cluster to pass associated controls.
+. Configures the Pod Security Admission Controller with the PSA configuration template `rancher-restricted`, to enforce restricted mode in all namespaces, except the ones in the template's exemption list.
+These namespaces are exempted to allow system pods to run without restrictions, which is required for proper operation of the cluster.
+
+[NOTE]
+====
+If you intend to import an RKE cluster into Rancher, please consult the xref:security/psact.adoc[documentation] for how to configure the PSA to exempt Rancher system namespaces.
+====
+--
 
 Tab v1.24 and Older::
 +
-On Kubernetes v1.24 and older, the `PodSecurityPolicy` admission controller is always enabled. Below is the minimum necessary configuration needed for hardening RKE2 to pass CIS v1.23 hardened profile `rke2-cis-1.23-hardened` available in Rancher. :::note In the following example the profile is set to `cis-1.6` which is the value defined in the upstream RKE2, but the cluster is actually configured to pass the CIS v1.23 hardened profile ::: ```yaml spec: defaultPodSecurityPolicyTemplateName: restricted-noroot rkeConfig: machineSelectorConfig: - config: profile: cis-1.6 ``` When both the `defaultPodSecurityPolicyTemplateName` and `profile` flags are set, Rancher and RKE2 does the following: 1. Checks that host-level requirements have been met. If they haven't, RKE2 will exit with a fatal error describing the unmet requirements. 2. Applies network policies that allow the cluster to pass associated controls. 3. Configures runtime pod security policies that allow the cluster to pass associated controls.
+--
+On Kubernetes v1.24 and older, the `PodSecurityPolicy` admission controller is always enabled.
+
+Below is the minimum necessary configuration needed for hardening RKE2 to pass CIS v1.23 hardened profile `rke2-cis-1.23-hardened` available in Rancher.
+
+[NOTE]
+====
+In the following example the profile is set to `cis-1.6` which is the value defined in the upstream RKE2, but the cluster is actually configured to pass the CIS v1.23 hardened profile
+====
+
+
+[,yaml]
+----
+spec:
+  defaultPodSecurityPolicyTemplateName: restricted-noroot
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.6
+----
+
+When both the `defaultPodSecurityPolicyTemplateName` and `profile` flags are set, Rancher and RKE2 does the following:
+
+. Checks that host-level requirements have been met. If they haven't, RKE2 will exit with a fatal error describing the unmet requirements.
+. Applies network policies that allow the cluster to pass associated controls.
+. Configures runtime pod security policies that allow the cluster to pass associated controls.
+--
 ======
 
 [NOTE]
@@ -194,11 +261,42 @@ The reference template configuration is used in Rancher to create a hardened RKE
 ======
 Tab v1.25 and Newer::
 +
-```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster metadata: name: # Define cluster name spec: defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted kubernetesVersion: # Define RKE2 version rkeConfig: machineSelectorConfig: - config: profile: cis-1.23 ``` 
+--
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+metadata:
+  name: # Define cluster name
+spec:
+  defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted
+  kubernetesVersion: # Define RKE2 version
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.23
+----
+--
 
 Tab v1.24 and Older::
 +
-```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster metadata: name: # Define cluster name spec: defaultPodSecurityPolicyTemplateName: restricted-noroot kubernetesVersion: # Define RKE2 version rkeConfig: machineSelectorConfig: - config: profile: cis-1.6 protect-kernel-defaults: true ```
+--
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+metadata:
+  name: # Define cluster name
+spec:
+  defaultPodSecurityPolicyTemplateName: restricted-noroot
+  kubernetesVersion: # Define RKE2 version
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.6
+          protect-kernel-defaults: true
+----
+--
 ======
 
 == Conclusion
