--- a/versions/latest/modules/en/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
+++ b/versions/latest/modules/en/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
@@ -17,11 +17,22 @@ After you upgrade to v1.25, add the necessary Rancher namespace exemptions. See 
 ======
 Tab RKE2::
 +
-Perform the following on each node in the cluster: 1. Save [`rancher-psact.yaml`](./rancher-psact.yaml) in `/etc/rancher/rke2`. 1. Edit the RKE2 configuration file: 1. Update the `profile` field to `cis-1.23`. 1. Specify the path for the configuration file that you just added: `pod-security-admission-config-file: /etc/rancher/rke2/rancher-psact.yaml`. 
+--
+Perform the following on each node in the cluster:
+
+. Save xref:./rancher-psact.yaml[`rancher-psact.yaml`] in `/etc/rancher/rke2`.
+. Edit the RKE2 configuration file:
+ .. Update the `profile` field to `cis-1.23`.
+ .. Specify the path for the configuration file that you just added: `pod-security-admission-config-file: /etc/rancher/rke2/rancher-psact.yaml`.
+--
 
 Tab K3s::
 +
-Perform the following on each node in the cluster: Follow the official K3s instructions on [Upgrading Hardened Clusters from v1.24.x to v1.25.x](https://docs.k3s.io/known-issues#hardened-125), but use a [custom](./rancher-psact.yaml) Rancher PSA configuration template, instead of the configuration provided on the official K3s site.
+--
+Perform the following on each node in the cluster:
+
+Follow the official K3s instructions on https://docs.k3s.io/known-issues#hardened-125[Upgrading Hardened Clusters from v1.24.x to v1.25.x], but use a xref:./rancher-psact.yaml[custom] Rancher PSA configuration template, instead of the configuration provided on the official K3s site.
+--
 ======
 
 After you perform these steps, you can upgrade the cluster's Kubernetes version through the Rancher UI:
@@ -38,9 +49,25 @@ After you perform these steps, you can upgrade the cluster's Kubernetes version 
 ======
 Tab RKE2::
 +
-1. In the upper left corner, click **☰ > Cluster Management**. 1. Find the cluster you want to update in the **Clusters** table, and click the **⋮**. 1. Select **Edit Config**. 1. Under **Basics > Security**, in the **CIS Profile** dropdown menu, select `cis-1.23`. 1. In the **Pod Security Admission Configuration Template** dropdown menu, select `rancher-restricted`. 1. In the **Kubernetes Version** dropdown menu, select the version that you would like to use. 1. Click **Save**. 
+--
+. In the upper left corner, click *☰ > Cluster Management*.
+. Find the cluster you want to update in the *Clusters* table, and click the *⋮*.
+. Select *Edit Config*.
+. Under menu:Basics[Security], in the *CIS Profile* dropdown menu, select `cis-1.23`.
+. In the *Pod Security Admission Configuration Template* dropdown menu, select `rancher-restricted`.
+. In the *Kubernetes Version* dropdown menu, select the version that you would like to use.
+. Click *Save*.
+--
 
 Tab K3s::
 +
-1. In the upper left corner, click **☰ > Cluster Management**. 1. Find the cluster you want to update in the **Clusters** table, and click the **⋮**. 1. Select **Edit YAML**. 1. Delete `PodSecurityPolicy` from `kube-apiserver-arg.enable-admission-plugins` 1. Add this line to the `spec` field: `defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted` 1. Update `kubernetesVersion` to your chosen version (v1.25 or later). 1. Click **Save**.
+--
+. In the upper left corner, click *☰ > Cluster Management*.
+. Find the cluster you want to update in the *Clusters* table, and click the *⋮*.
+. Select *Edit YAML*.
+. Delete `PodSecurityPolicy` from `kube-apiserver-arg.enable-admission-plugins`
+. Add this line to the `spec` field: `defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted`
+. Update `kubernetesVersion` to your chosen version (v1.25 or later).
+. Click *Save*.
+--
 ======
