--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -92,23 +92,337 @@ After the registered cluster is detached from Rancher, the cluster's workloads w
 ======
 Tab By UI / API::
 +
-:::danger This process will remove data from your cluster. Make sure you have created a backup of files you want to keep before executing the command, as data will be lost. ::: After you initiate the removal of a registered cluster using the Rancher UI (or API), the following events occur. 1. Rancher creates a `serviceAccount` that it uses to remove the Rancher components from the cluster. This account is assigned the [clusterRole](https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole) and [clusterRoleBinding](https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding) permissions, which are required to remove the Rancher components. 1. Using the `serviceAccount`, Rancher schedules and runs a [job](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/) that cleans the Rancher components off of the cluster. This job also references the `serviceAccount` and its roles as dependencies, so the job deletes them before its completion. 1. Rancher is removed from the cluster. However, the cluster persists, running the native version of Kubernetes. **Result:** All components listed for registered clusters in [What Gets Removed?](#what-gets-removed) are deleted. 
+--
+[WARNING]
+====
+This process will remove data from your cluster. Make sure you have created a backup of files you want to keep before executing the command, as data will be lost.
+====
+
+After you initiate the removal of a registered cluster using the Rancher UI (or API), the following events occur.
+
+. Rancher creates a `serviceAccount` that it uses to remove the Rancher components from the cluster. This account is assigned the https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole[clusterRole] and https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding[clusterRoleBinding] permissions, which are required to remove the Rancher components.
+. Using the `serviceAccount`, Rancher schedules and runs a https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/[job] that cleans the Rancher components off of the cluster. This job also references the `serviceAccount` and its roles as dependencies, so the job deletes them before its completion.
+. Rancher is removed from the cluster. However, the cluster persists, running the native version of Kubernetes.
+
+*Result:* All components listed for registered clusters in <<_what_gets_removed,What Gets Removed?>> are deleted.
+--
 
 Tab By Script::
 +
-Rather than cleaning registered cluster nodes using the Rancher UI, you can run a script instead. :::note Prerequisite: Install [kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl/). ::: 1. Open a web browser, navigate to [GitHub](https://github.com/rancher/rancher/blob/master/cleanup/user-cluster.sh), and download `user-cluster.sh`. 1. Make the script executable by running the following command from the same directory as `user-cluster.sh`: ``` chmod +x user-cluster.sh ``` 1. **Air Gap Environments Only:** Open `user-cluster.sh` and replace `yaml_url` with the URL in `user-cluster.yml`. If you don't have an air gap environment, skip this step. 1. From the same directory, run the script and provide the `rancher/rancher-agent` image version which should be equal to the version of Rancher used to manage the cluster. (`+++<RANCHER_VERSION>+++`): :::tip Add the `-dry-run` flag to preview the script's outcome without making changes. ``` ./user-cluster.sh rancher/rancher-agent:+++<RANCHER_VERSION>+++``` ::: **Result:** The script runs. All components listed for registered clusters in [What Gets Removed?](#what-gets-removed) are deleted.  
-====== ## Cleaning up Nodes +++<Tabs groupId="k8s-distro" queryString="">
+--
+Rather than cleaning registered cluster nodes using the Rancher UI, you can run a script instead.
 
+[NOTE]
+.Prerequisite
+====
+Install https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl].
+====
+
+
+. Open a web browser, navigate to https://github.com/rancher/rancher/blob/master/cleanup/user-cluster.sh[GitHub], and download `user-cluster.sh`.
+. Make the script executable by running the following command from the same directory as `user-cluster.sh`:
++
+----
+chmod +x user-cluster.sh
+----
+
+. *Air Gap Environments Only:* Open `user-cluster.sh` and replace `yaml_url` with the URL in `user-cluster.yml`.
++
+If you don't have an air gap environment, skip this step.
+
+. From the same directory, run the script and provide the `rancher/rancher-agent` image version which should be equal to the version of Rancher used to manage the cluster. (`<RANCHER_VERSION>`):
++
+[TIP]
+====
+Add the `-dry-run` flag to preview the script's outcome without making changes.
+
+----
+./user-cluster.sh rancher/rancher-agent:<RANCHER_VERSION>
+----
+====
+
+*Result:* The script runs. All components listed for registered clusters in <<_what_gets_removed,What Gets Removed?>> are deleted.
+--
+====== 
+
+## Cleaning up Nodes 
+
+[tabs,sync-group-id=k8s-distro]
+======
 Tab RKE1::
 +
-Before you run the following commands, first remove the node through the Rancher UI. To remove a node: 1. Click **☰** and select **Cluster Management**. 1. In the table of clusters, click the name of the cluster the node belongs to. 1. In the first tab, click the checkbox next to the node's state. 1. Click **Delete**. If you remove the entire cluster instead of an individual node, or skip rermoving the node through the Rancher UI, follow these steps: 1. [Remove](#docker-containers-images-and-volumes) the Docker containers from the node and [unmount](#mounts) any volumes. 1. Reboot the node. 1. [Remove](#directories-and-files) any remaining files. 1. Confirm that network interfaces and IP tables were properly cleaned after the reboot. If not, reboot one more time. ### Windows Nodes To clean up a Windows node, run the script in `c:\etc\rancher`. This script deletes Kubernetes-generated resources and the execution binary. It also drops the firewall rules and network settings: ``` pushd c:\etc\rancher .\cleanup.ps1 popd ``` After you run this script, the node is reset and can be re-added to a Kubernetes cluster. ### Docker Containers, Images, and Volumes :::caution Be careful when cleaning up Docker containers. The following command will remove *all* Docker containers, images, and volumes on the node, including non-Rancher related containers: ::: ``` docker rm -f $(docker ps -qa) docker rmi -f $(docker images -q) docker volume rm $(docker volume ls -q) ``` ### Mounts Kubernetes components and secrets leave behind the following mounts: * `/var/lib/kubelet` * `/var/lib/rancher` * Miscellaneous mounts in `/var/lib/kubelet/pods/` To unmount all mounts, run: ``` for mount in $(mount | grep tmpfs | grep '/var/lib/kubelet' | awk '{ print $3 }') /var/lib/kubelet /var/lib/rancher; do umount $mount; done ``` 
+--
+Before you run the following commands, first remove the node through the Rancher UI.
+
+To remove a node:
+
+. Click *☰* and select *Cluster Management*.
+. In the table of clusters, click the name of the cluster the node belongs to.
+. In the first tab, click the checkbox next to the node's state.
+. Click *Delete*.
+
+If you remove the entire cluster instead of an individual node, or skip rermoving the node through the Rancher UI, follow these steps:
+
+. <<_docker_containers_images_and_volumes,Remove>> the Docker containers from the node and <<mounts,unmount>> any volumes.
+. Reboot the node.
+. <<_directories_and_files,Remove>> any remaining files.
+. Confirm that network interfaces and IP tables were properly cleaned after the reboot. If not, reboot one more time.
+
+[pass]
+<h3><a class="anchor" href="#_windows_nodes"></a>Windows Nodes</h3>
+
+
+To clean up a Windows node, run the script in `c:\etc\rancher`. This script deletes Kubernetes-generated resources and the execution binary. It also drops the firewall rules and network settings:
+
+----
+pushd c:\etc\rancher
+.\cleanup.ps1
+popd
+----
+
+After you run this script, the node is reset and can be re-added to a Kubernetes cluster.
+
+[pass]
+<h3><a class="anchor" href="#_docker_containers_images_and_volumes"></a>Docker Containers, Images, and Volumes</h3>
+
+[CAUTION]
+====
+
+Be careful when cleaning up Docker containers. The following command will remove _all_ Docker containers, images, and volumes on the node, including non-Rancher related containers:
+====
+
+----
+docker rm -f $(docker ps -qa)
+docker rmi -f $(docker images -q)
+docker volume rm $(docker volume ls -q)
+----
+
+[pass]
+<h3><a class="anchor" href="#_mounts"></a>Mounts</h3>
+
+Kubernetes components and secrets leave behind the following mounts:
+
+* `/var/lib/kubelet`
+* `/var/lib/rancher`
+* Miscellaneous mounts in `/var/lib/kubelet/pods/`
+
+To unmount all mounts, run:
+
+----
+for mount in $(mount | grep tmpfs | grep '/var/lib/kubelet' | awk '{ print $3 }') /var/lib/kubelet /var/lib/rancher; do umount $mount; done
+----
+--
 
 Tab RKE2::
 +
-You need to remove the following components from Rancher-provisioned RKE2 nodes: * The rancher-system-agent, which connects to Rancher and installs and manages RKE2. * RKE2 itself. ### Removing rancher-system-agent To remove the rancher-system-agent, run the [system-agent-uninstall.sh](https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh) script: ``` curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh ``` ### Removing RKE2 To remove the RKE2 installation, run the `rke2-uninstall` script that is already present on the node: ``` sudo rke2-uninstall.sh ``` 
+--
+You need to remove the following components from Rancher-provisioned RKE2 nodes:
+
+* The rancher-system-agent, which connects to Rancher and installs and manages RKE2.
+* RKE2 itself.
+
+[pass]
+<h3><a class="anchor" href="#_removing_rancher-system-agent"></a>Removing rancher-system-agent</h3>
+
+
+To remove the rancher-system-agent, run the https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] script:
+
+----
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+----
+
+[pass]
+<h3><a class="anchor" href="#_removing_rke2"></a>Removing RKE2</h3>
+
+To remove the RKE2 installation, run the `rke2-uninstall` script that is already present on the node:
+
+----
+sudo rke2-uninstall.sh
+----
+--
 
 Tab K3s::
 +
-You need to remove the following components from Rancher-provisioned K3s nodes: * The rancher-system-agent, which connects to Rancher and installs and manages K3s. * K3s itself. ### Removing rancher-system-agent To remove the rancher-system-agent, run the [system-agent-uninstall.sh](https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh) script: ``` curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh ``` ### Removing K3s To remove the K3s installation, run the `k3s-uninstall` script that is already present on the node: ``` sudo k3s-uninstall.sh ```
-====== ### Directories and Files The following directories are used when adding a node to a cluster, and should be removed. You can remove a directory using `rm -rf /directory_name`. :::note Depending on the role you assigned to the node, some of the directories will or won't be present on the node. ::: | Directories | |------------------------------| | `/etc/ceph` | | `/etc/cni` | | `/etc/kubernetes` | | `/etc/rancher` | | `/opt/cni` | | `/opt/rke` | | `/run/secrets/kubernetes.io` | | `/run/calico` | | `/run/flannel` | | `/var/lib/calico` | | `/var/lib/etcd` | | `/var/lib/cni` | | `/var/lib/kubelet` | | `/var/lib/rancher` | | `/var/log/containers` | | `/var/log/kube-audit` | | `/var/log/pods` | | `/var/run/calico` | **To clean the directories:** ``` rm -rf /etc/ceph \ /etc/cni \ /etc/kubernetes \ /etc/rancher \ /opt/cni \ /opt/rke \ /run/secrets/kubernetes.io \ /run/calico \ /run/flannel \ /var/lib/calico \ /var/lib/etcd \ /var/lib/cni \ /var/lib/kubelet \ /var/lib/rancher\ /var/log/containers \ /var/log/kube-audit \ /var/log/pods \ /var/run/calico ``` ### Network Interfaces and Iptables The remaining two components that are changed/configured are (virtual) network interfaces and iptables rules. Both are non-persistent to the node, meaning that they will be cleared after a restart of the node. To remove these components, a restart is recommended. **To restart a node:** ``` # using reboot $ sudo reboot # using shutdown $ sudo shutdown -r now ``` If you want to know more on (virtual) network interfaces or iptables rules, please see the specific subjects below. ### Network Interfaces :::note Depending on the network provider configured for the cluster the node was part of, some of the interfaces will or won't be present on the node. ::: | Interfaces | |--------------------------------------------| | `flannel.1` | | `cni0` | | `tunl0` | | `caliXXXXXXXXXXX` (random interface names) | | `vethXXXXXXXX` (random interface names) | **To list all interfaces:** ``` # Using ip ip address show # Using ifconfig ifconfig -a ``` **To remove an interface:** ``` ip link delete interface_name ``` ### Iptables :::note Depending on the network provider configured for the cluster the node was part of, some of the chains will or won't be present on the node. ::: Iptables rules are used to route traffic from and to containers. The created rules are not persistent, so restarting the node will restore iptables to its original state. | Chains | |--------------------------------------------------| | `cali-failsafe-in` | | `cali-failsafe-out` | | `cali-fip-dnat` | | `cali-fip-snat` | | `cali-from-hep-forward` | | `cali-from-host-endpoint` | | `cali-from-wl-dispatch` | | `cali-fw-caliXXXXXXXXXXX` (random chain names) | | `cali-nat-outgoing` | | `cali-pri-kns.NAMESPACE` (chain per namespace) | | `cali-pro-kns.NAMESPACE` (chain per namespace) | | `cali-to-hep-forward` | | `cali-to-host-endpoint` | | `cali-to-wl-dispatch` | | `cali-tw-caliXXXXXXXXXXX` (random chain names) | | `cali-wl-to-host` | | `KUBE-EXTERNAL-SERVICES` | | `KUBE-FIREWALL` | | `KUBE-MARK-DROP` | | `KUBE-MARK-MASQ` | | `KUBE-NODEPORTS` | | `KUBE-SEP-XXXXXXXXXXXXXXXX` (random chain names) | | `KUBE-SERVICES` | | `KUBE-SVC-XXXXXXXXXXXXXXXX` (random chain names) | **To list all iptables rules:** ``` iptables -L -t nat iptables -L -t mangle iptables -L ```+++</RANCHER_VERSION>++++++</RANCHER_VERSION>
-======
+--
+You need to remove the following components from Rancher-provisioned K3s nodes:
+
+* The rancher-system-agent, which connects to Rancher and installs and manages K3s.
+* K3s itself.
+
+[pass]
+<h3><a class="anchor" href="#_removing_rancher-system-agent"></a>Removing rancher-system-agent</h3>
+
+
+To remove the rancher-system-agent, run the [system-agent-uninstall.sh](https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh) script:
+
+```
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+```
+
+[pass]
+<h3><a class="anchor" href="#_removing_k3s"></a>Removing K3s</h3>
+
+
+To remove the K3s installation, run the `k3s-uninstall` script that is already present on the node:
+
+```
+sudo k3s-uninstall.sh
+```
+--
+====== 
+
+=== Directories and Files
+
+The following directories are used when adding a node to a cluster, and should be removed. You can remove a directory using `rm -rf /directory_name`.
+
+[NOTE]
+====
+
+Depending on the role you assigned to the node, some of the directories will or won't be present on the node.
+====
+
+
+|===
+| Directories
+
+| `/etc/ceph`
+| `/etc/cni`
+| `/etc/kubernetes`
+| `/etc/rancher`
+| `/opt/cni`
+| `/opt/rke`
+| `/run/secrets/kubernetes.io`
+| `/run/calico`
+| `/run/flannel`
+| `/var/lib/calico`
+| `/var/lib/etcd`
+| `/var/lib/cni`
+| `/var/lib/kubelet`
+| `/var/lib/rancher`
+| `/var/log/containers`
+| `/var/log/kube-audit`
+| `/var/log/pods`
+| `/var/run/calico`
+|===
+
+*To clean the directories:*
+
+----
+rm -rf /etc/ceph \
+       /etc/cni \
+       /etc/kubernetes \
+       /etc/rancher \
+       /opt/cni \
+       /opt/rke \
+       /run/secrets/kubernetes.io \
+       /run/calico \
+       /run/flannel \
+       /var/lib/calico \
+       /var/lib/etcd \
+       /var/lib/cni \
+       /var/lib/kubelet \
+       /var/lib/rancher\
+       /var/log/containers \
+       /var/log/kube-audit \
+       /var/log/pods \
+       /var/run/calico
+----
+
+=== Network Interfaces and Iptables
+
+The remaining two components that are changed/configured are (virtual) network interfaces and iptables rules. Both are non-persistent to the node, meaning that they will be cleared after a restart of the node. To remove these components, a restart is recommended.
+
+*To restart a node:*
+
+----
+# using reboot
+$ sudo reboot
+
+# using shutdown
+$ sudo shutdown -r now
+----
+
+If you want to know more on (virtual) network interfaces or iptables rules, please see the specific subjects below.
+
+=== Network Interfaces
+
+[NOTE]
+====
+
+Depending on the network provider configured for the cluster the node was part of, some of the interfaces will or won't be present on the node.
+====
+
+
+|===
+| Interfaces
+
+| `flannel.1`
+| `cni0`
+| `tunl0`
+| `caliXXXXXXXXXXX` (random interface names)
+| `vethXXXXXXXX` (random interface names)
+|===
+
+*To list all interfaces:*
+
+----
+# Using ip
+ip address show
+
+# Using ifconfig
+ifconfig -a
+----
+
+*To remove an interface:*
+
+----
+ip link delete interface_name
+----
+
+=== Iptables
+
+[NOTE]
+====
+
+Depending on the network provider configured for the cluster the node was part of, some of the chains will or won't be present on the node.
+====
+
+
+Iptables rules are used to route traffic from and to containers. The created rules are not persistent, so restarting the node will restore iptables to its original state.
+
+|===
+| Chains
+
+| `cali-failsafe-in`
+| `cali-failsafe-out`
+| `cali-fip-dnat`
+| `cali-fip-snat`
+| `cali-from-hep-forward`
+| `cali-from-host-endpoint`
+| `cali-from-wl-dispatch`
+| `cali-fw-caliXXXXXXXXXXX` (random chain names)
+| `cali-nat-outgoing`
+| `cali-pri-kns.NAMESPACE` (chain per namespace)
+| `cali-pro-kns.NAMESPACE` (chain per namespace)
+| `cali-to-hep-forward`
+| `cali-to-host-endpoint`
+| `cali-to-wl-dispatch`
+| `cali-tw-caliXXXXXXXXXXX` (random chain names)
+| `cali-wl-to-host`
+| `KUBE-EXTERNAL-SERVICES`
+| `KUBE-FIREWALL`
+| `KUBE-MARK-DROP`
+| `KUBE-MARK-MASQ`
+| `KUBE-NODEPORTS`
+| `KUBE-SEP-XXXXXXXXXXXXXXXX` (random chain names)
+| `KUBE-SERVICES`
+| `KUBE-SVC-XXXXXXXXXXXXXXXX` (random chain names)
+|===
+
+*To list all iptables rules:*
+
+----
+iptables -L -t nat
+iptables -L -t mangle
+iptables -L
+----
