--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc
@@ -20,11 +20,24 @@ Since Rancher can't detect the platform of an imported cluster, you cannot enabl
 ======
 Tab RKE2/K3s::
 +
-In RKE2/K3s, you can configure new VMware vSphere clusters with graceful shutdown for VMs: 1. Click **☰ > Cluster Management**. 1. Click **Create** and select **VMware vSphere** to provision a new cluster. 1. Under **Machine Pools > Scheduling**, in the **Graceful Shutdown Timeout** field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled. 
+--
+In RKE2/K3s, you can configure new VMware vSphere clusters with graceful shutdown for VMs:
+
+. Click *☰ > Cluster Management*.
+. Click *Create* and select *VMware vSphere* to provision a new cluster.
+. Under menu:Machine Pools[Scheduling], in the *Graceful Shutdown Timeout* field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled.
+--
 
 Tab RKE::
 +
-In RKE, you can't directly configure a new cluster with graceful shutdown. However, you can configure node templates which automatically create node pools with graceful shutdown enabled. The node template can then be used to provision new VMware vSphere clusters that have a graceful shutdown delay. 1. Click **☰ > Cluster Management**. 1. From the left navigation, select **RKE1 Configuration > Node Templates**. 1. Click **Add Template** and select **vSphere** to create a node template. 1. Under **2. Scheduling**, in the **Graceful Shutdown Timeout** field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled. When you [use the newly-created node template to create node pools](../infra-providers.md), the nodes will gracefully shutdown of VMs according to the **Graceful Shutdown Timeout** value you have set.
+--
+. Click *☰ > Cluster Management*.
+. From the left navigation, select menu:RKE1 Configuration[Node Templates].
+. Click *Add Template* and select *vSphere* to create a node template.
+. Under *2. Scheduling*, in the *Graceful Shutdown Timeout* field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled.
+
+When you xref:cluster-deployment/infra-providers/infra-providers.adoc[use the newly-created node template to create node pools], the nodes will gracefully shutdown of VMs according to the *Graceful Shutdown Timeout* value you have set.
+--
 ======
 
 == Enable Graceful Shutdown in Existing RKE2/K3s Clusters
@@ -37,7 +50,7 @@ In RKE2/K3s, you can edit the configuration of an existing VMware vSphere cluste
 
 == Enable Graceful Shutdown in Existing RKE Clusters
 
-In RKE, you can't directly edit an existing cluster's configuration to add graceful shutdown to existing VMware vSphere clusters. However, you can edit the configuration of existing node templates. As noted in xref:rancher-admin/user/settings/manage-node-templates.adoc#_updating_a_node_template[Updating a Node Template], all node pools using the node template automatically use the updated information when new nodes are added to the cluster.
+In RKE, you can't directly edit an existing cluster's configuration to add graceful shutdown to existing VMware vSphere clusters. However, you can edit the configuration of existing node templates. As noted in xref:rancher-admin/users/settings/manage-node-templates.adoc#_updating_a_node_template[Updating a Node Template], all node pools using the node template automatically use the updated information when new nodes are added to the cluster.
 
 To edit an existing node template to enable graceful shutdown:
 
