--- a/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc
@@ -25,9 +25,201 @@ Starting with Kubernetes v1.26, in-tree persistent volume types `kubernetes.io/a
 ======
 Tab RKE2::
 +
-1. Update the cluster config to enable leader migration: ```yaml spec: rkeConfig: machineSelectorConfig: - config: kube-controller-manager-arg: - enable-leader-migration machineLabelSelector: matchExpressions: - key: rke.cattle.io/control-plane-role operator: In values: - 'true' ``` Note that the cloud provider is still `azure` at this step: ```yaml spec: rkeConfig: machineGlobalConfig: cloud-provider-name: azure ``` 2. Cordon control plane nodes so that Azure cloud controller pods run on nodes only after upgrading to the external cloud provider: ```shell kubectl cordon -l "node-role.kubernetes.io/control-plane=true" ``` 3. To deploy the Azure cloud controller manager, use any of the available options: - UI: Follow steps 1-10 of [Helm chart installation from UI](../set-up-cloud-providers/azure.md#helm-chart-installation-from-ui) to install the cloud controller manager chart. - CLI: Follow steps 1-4 of [Helm chart installation from CLI](../set-up-cloud-providers/azure.md#helm-chart-installation-from-cli). - Update the cluster's additional manifest: Follow steps 2-3 to [install the cloud controller manager chart](../set-up-cloud-providers/azure.md#using-the-out-of-tree-azure-cloud-provider). Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. 4. To enable leader migration, add `--enable-leader-migration` to the container arguments of `cloud-controller-manager`: ```shell kubectl -n kube-system patch deployment cloud-controller-manager \ --type=json \ -p='[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value": "--enable-leader-migration"}]' ``` 5. Update the provisioning cluster to change the cloud provider and remove leader migration args from the kube controller manager. If upgrading the Kubernetes version, set the Kubernetes version as well in the `spec.kubernetesVersion` section of the cluster YAML file. ```yaml spec: rkeConfig: machineGlobalConfig: cloud-provider-name: external ``` Remove `enable-leader-migration` from the kube controller manager: ```yaml spec: rkeConfig: machineSelectorConfig: - config: kube-controller-manager-arg: - enable-leader-migration machineLabelSelector: matchExpressions: - key: rke.cattle.io/control-plane-role operator: In values: - 'true' ``` 6. Uncordon control plane nodes so that Azure cloud controller pods now run on nodes: ```shell kubectl uncordon -l "node-role.kubernetes.io/control-plane=true" ``` 7. Update the cluster. The `cloud-controller-manager` pods should now be running. ```shell kubectl rollout status deployment -n kube-system cloud-controller-manager kubectl rollout status daemonset -n kube-system cloud-node-manager ``` 8. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID: ```shell kubectl describe nodes | grep "ProviderID" ``` 9. (Optional) You can also disable leader migration after the upgrade, as leader migration is not required with only one cloud-controller-manager. Update the `cloud-controller-manager` deployment to remove leader migration from the container arguments: ```yaml - --enable-leader-migration=true ``` 
+--
+. Update the cluster config to enable leader migration:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          kube-controller-manager-arg:
+            - enable-leader-migration
+        machineLabelSelector:
+          matchExpressions:
+            - key: rke.cattle.io/control-plane-role
+              operator: In
+              values:
+                - 'true'
+----
++
+Note that the cloud provider is still `azure` at this step:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      cloud-provider-name: azure
+----
+
+. Cordon control plane nodes so that Azure cloud controller pods run on nodes only after upgrading to the external cloud provider:
++
+[,shell]
+----
+kubectl cordon -l "node-role.kubernetes.io/control-plane=true"
+----
+
+. To deploy the Azure cloud controller manager, use any of the available options:
+ ** UI: Follow steps 1-10 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
+ ** CLI: Follow steps 1-4 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_cli[Helm chart installation from CLI].
+ ** Update the cluster's additional manifest: Follow steps 2-3 to xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_using_the_out_of_tree_azure_cloud_provider[install the cloud controller manager chart].
+
++
+Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes.
+
+. To enable leader migration, add `--enable-leader-migration` to the container arguments of `cloud-controller-manager`:
++
+[,shell]
+----
+kubectl -n kube-system patch deployment cloud-controller-manager \
+--type=json \
+-p='[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value": "--enable-leader-migration"}]'
+----
+
+. Update the provisioning cluster to change the cloud provider and remove leader migration args from the kube controller manager.
+If upgrading the Kubernetes version, set the Kubernetes version as well in the `spec.kubernetesVersion` section of the cluster YAML file.
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      cloud-provider-name: external
+----
++
+Remove `enable-leader-migration` from the kube controller manager:
++
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          kube-controller-manager-arg:
+            - enable-leader-migration
+        machineLabelSelector:
+          matchExpressions:
+            - key: rke.cattle.io/control-plane-role
+              operator: In
+              values:
+                - 'true'
+----
+
+. Uncordon control plane nodes so that Azure cloud controller pods now run on nodes:
++
+[,shell]
+----
+kubectl uncordon -l "node-role.kubernetes.io/control-plane=true"
+----
+
+. Update the cluster. The `cloud-controller-manager` pods should now be running.
++
+[,shell]
+----
+kubectl rollout status deployment -n kube-system cloud-controller-manager
+kubectl rollout status daemonset -n kube-system cloud-node-manager
+----
+
+. The cloud provider is responsible for setting the ProviderID of the node. Check if all nodes are initialized with the ProviderID:
++
+[,shell]
+----
+kubectl describe nodes | grep "ProviderID"
+----
+
+. (Optional) You can also disable leader migration after the upgrade, as leader migration is not required with only one cloud-controller-manager.
+ Update the `cloud-controller-manager` deployment to remove leader migration from the container arguments:
++
+[,yaml]
+----
+- --enable-leader-migration=true
+----
+--
 
 Tab RKE::
 +
-1. Update the cluster config to enable leader migration in `cluster.yml`: ```yaml services: kube-controller: extra_args: enable-leader-migration: "true" ``` Note that the cloud provider is still `azure` at this step: ```yaml cloud_provider: name: azure ``` 2. Cordon the control plane nodes, so that Azure cloud controller pods run on nodes only after upgrading to the external cloud provider: ```shell kubectl cordon -l "node-role.kubernetes.io/controlplane=true" ``` 3. To install the Azure cloud controller manager, follow the same steps as when installing Azure cloud provider on a new cluster: - UI: Follow steps 1-10 of [Helm chart installation from UI](../set-up-cloud-providers/azure.md#helm-chart-installation-from-ui) to install the cloud controller manager chart. - CLI: Follow steps 1-4 of [Helm chart installation from CLI](../set-up-cloud-providers/azure.md#helm-chart-installation-from-cli) to install the cloud controller manager chart. 4. Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. After updating the cluster in the next step, RKE will upgrade and uncordon each node, and schedule `cloud-controller-manager` pods. 5. To enable leader migration, add `--enable-leader-migration` to the container arguments of `cloud-controller-manager`: ```shell kubectl -n kube-system patch deployment cloud-controller-manager \ --type=json \ -p='[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value": "--enable-leader-migration"}]' ``` 6. Update `cluster.yml` to change the cloud provider to `external` and remove the leader migration arguments from the kube-controller. ```yaml rancher_kubernetes_engine_config: cloud_provider: name: external ``` Remove `enable-leader-migration` if you don't want it enabled in your cluster: ```yaml services: kube-controller: extra_args: enable-leader-migration: "true" ``` 7. If you're upgrading the cluster's Kubernetes version, set the Kubernetes version as well. 8. Update the cluster. The `cloud-controller-manager` pods should now be running. ```shell kubectl rollout status deployment -n kube-system cloud-controller-manager kubectl rollout status daemonset -n kube-system cloud-node-manager ``` 9. The cloud provider is responsible for setting the ProviderID of the node. Verify that all nodes are initialized with the ProviderID: ```shell kubectl describe nodes | grep "ProviderID" ``` 10. (Optional) You can also disable leader migration after the upgrade, as leader migration is not required with only one cloud-controller-manager. Update the `cloud-controller-manager` deployment to remove leader migration from the container arguments: ```yaml - --enable-leader-migration=true ```
+--
+. Update the cluster config to enable leader migration in `cluster.yml`:
++
+[,yaml]
+----
+services:
+  kube-controller:
+    extra_args:
+      enable-leader-migration: "true"
+----
++
+Note that the cloud provider is still `azure` at this step:
++
+[,yaml]
+----
+cloud_provider:
+  name: azure
+----
+
+. Cordon the control plane nodes, so that Azure cloud controller pods run on nodes only after upgrading to the external cloud provider:
++
+[,shell]
+----
+kubectl cordon -l "node-role.kubernetes.io/controlplane=true"
+----
+
+. To install the Azure cloud controller manager, follow the same steps as when installing Azure cloud provider on a new cluster:
+ ** UI: Follow steps 1-10 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
+ ** CLI: Follow steps 1-4 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_cli[Helm chart installation from CLI] to install the cloud controller manager chart.
+. Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. After updating the cluster in the next step, RKE will upgrade and uncordon each node, and schedule `cloud-controller-manager` pods.
+. To enable leader migration, add `--enable-leader-migration` to the container arguments of `cloud-controller-manager`:
++
+[,shell]
+----
+kubectl -n kube-system patch deployment cloud-controller-manager \
+--type=json \
+-p='[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value": "--enable-leader-migration"}]'
+----
+
+. Update `cluster.yml` to change the cloud provider to `external` and remove the leader migration arguments from the kube-controller.
++
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  cloud_provider:
+    name: external
+----
++
+Remove `enable-leader-migration` if you don't want it enabled in your cluster:
++
+[,yaml]
+----
+services:
+  kube-controller:
+    extra_args:
+      enable-leader-migration: "true"
+----
+
+. If you're upgrading the cluster's Kubernetes version, set the Kubernetes version as well.
+. Update the cluster. The `cloud-controller-manager` pods should now be running.
++
+[,shell]
+----
+kubectl rollout status deployment -n kube-system cloud-controller-manager
+kubectl rollout status daemonset -n kube-system cloud-node-manager
+----
+
+. The cloud provider is responsible for setting the ProviderID of the node. Verify that all nodes are initialized with the ProviderID:
++
+[,shell]
+----
+kubectl describe nodes | grep "ProviderID"
+----
+
+. (Optional) You can also disable leader migration after the upgrade, as leader migration is not required with only one cloud-controller-manager.
+Update the `cloud-controller-manager` deployment to remove leader migration from the container arguments:
++
+[,yaml]
+----
+- --enable-leader-migration=true
+----
+--
 ======
