--- a/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc
@@ -8,7 +8,7 @@ If you already have a GKE Kubernetes cluster, skip to the step about <<_7_instal
 
 * You will need a Google account.
 * You will need a Google Cloud billing account. You can manage your Cloud Billing accounts using the Google Cloud Console. For more information about the Cloud Console, visit https://support.google.com/cloud/answer/3465889?hl=en&ref_topic=3340599[General guide to the console.]
-* You will need a cloud quota for at least one in-use IP address and at least 2 CPUs. For more details about hardware requirements for the Rancher server, refer to xref:installation-and-upgrade/requirements/installation-requirements.adoc[this section.]
+* You will need a cloud quota for at least one in-use IP address and at least 2 CPUs. For more details about hardware requirements for the Rancher server, refer to xref:installation-and-upgrade/requirements/requirements.adoc[this section.]
 
 == 1. Enable the Kubernetes Engine API
 
@@ -72,11 +72,26 @@ Set up default gcloud settings using one of the following methods:
 ======
 Tab Using gcloud init::
 +
-1. Run gcloud init and follow the directions: ``` gcloud init ``` If you are using SSH on a remote server, use the --console-only flag to prevent the command from launching a browser: ``` gcloud init --console-only ``` 2. Follow the instructions to authorize gcloud to use your Google Cloud account and select the new project that you created. 
+--
+. Run gcloud init and follow the directions:
++
+----
+  gcloud init
+----
++
+If you are using SSH on a remote server, use the --console-only flag to prevent the command from launching a browser:
++
+----
+  gcloud init --console-only
+----
+
+. Follow the instructions to authorize gcloud to use your Google Cloud account and select the new project that you created.
+--
 
 Tab Using gcloud config::
 +
-
+--
+--
 ======
 
 == 4. Confirm that gcloud is configured correctly
