--- a/versions/latest/modules/en/pages/observability/logging/enable-api-audit-log-in-downstream-clusters.adoc
+++ b/versions/latest/modules/en/pages/observability/logging/enable-api-audit-log-in-downstream-clusters.adoc
@@ -10,14 +10,250 @@ For configuration details, refer to the https://kubernetes.io/docs/tasks/debug/d
 ======
 Tab RKE2::
 +
-### Method 1 (Recommended): Set `audit-policy-file` in `machineGlobalConfig` You can set `audit-policy-file` in the configuration file. Rancher delivers the file to the path `/var/lib/rancher/rke2/etc/config-files/audit-policy-file` in control plane nodes, and sets the proper options in the RKE2 server. Example: ```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster spec: rkeConfig: machineGlobalConfig: audit-policy-file: | apiVersion: audit.k8s.io/v1 kind: Policy rules: - level: RequestResponse resources: - group: "" resources: - pods ``` ### Method 2: Use the Directives, `machineSelectorFiles` and `machineGlobalConfig` :::note This feature is available in Rancher v2.7.2 and later. ::: You can use `machineSelectorFiles` to deliver the audit policy file to the control plane nodes, and `machineGlobalConfig` to set the options on kube-apiserver. As a prerequisite, you must create a [secret](../../security/serets-hub.md) or [configmap](../../cluster-admin/kubernetes-resources/configmaps.md) to be the source of the audit policy. The secret or configmap must meet the following requirements: 1. It must be in the `fleet-default` namespace where the Cluster object exists. 2. It must have the annotation `rke.cattle.io/object-authorized-for-clusters: +++<cluster-name1>+++,+++<cluster-name2>+++` which permits the target clusters to use it. :::tip Rancher Dashboard provides an easy-to-use form for creating the secret or configmap. ::: Example: ```yaml apiVersion: v1 data: audit-policy: >- IyBMb2cgYWxsIHJlcXVlc3RzIGF0IHRoZSBNZXRhZGF0YSBsZXZlbC4KYXBpVmVyc2lvbjogYXVkaXQuazhzLmlvL3YxCmtpbmQ6IFBvbGljeQpydWxlczoKLSBsZXZlbDogTWV0YWRhdGE= kind: Secret metadata: annotations: rke.cattle.io/object-authorized-for-clusters: cluster1 name: +++<name1>+++namespace: fleet-default ``` Enable and configure the audit log by editing the cluster in YAML, and utilizing the `machineSelectorFiles` and `machineGlobalConfig` directives. Example: ```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster spec: rkeConfig: machineGlobalConfig: kube-apiserver-arg: - audit-policy-file=+++<customized-path>+++/dev-audit-policy.yaml - audit-log-path=+++<customized-path>+++/dev-audit.logs machineSelectorFiles: - fileSources: - configMap: name: '' secret: items: - key: audit-policy path: +++<customized-path>+++/dev-audit-policy.yaml name: dev-audit-policy machineLabelSelector: matchLabels: rke.cattle.io/control-plane-role: 'true' ``` :::tip You can also use the directive `machineSelectorConfig` with proper machineLabelSelectors to achieve the same effect. ::: For more information about cluster configuration, refer to the [RKE2 cluster configuration reference](../../cluster-deployment/configuration/rke2.md) pages.  
+--
+[pass]
+<h2><a class="anchor" href="#_method_1_recommended_set_audit-policy-file_in_machineglobalconfig"></a>Method 1 (Recommended): Set `audit-policy-file` in `machineGlobalConfig`</h2>
+
+You can set `audit-policy-file` in the configuration file. Rancher delivers the file to the path `/var/lib/rancher/rke2/etc/config-files/audit-policy-file` in control plane nodes, and sets the proper options in the RKE2 server.
+
+Example:
+
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      audit-policy-file: |
+        apiVersion: audit.k8s.io/v1
+        kind: Policy
+        rules:
+          - level: RequestResponse
+            resources:
+              - group: ""
+                resources:
+                  - pods
+----
+
+[pass]
+<h2><a class="anchor" href="#_method_2_use_the_directives_machineselectorfiles_and_machineglobalconfig"></a>Method 2: Use the Directives, `machineSelectorFiles` and `machineGlobalConfig`</h2>
+
+[NOTE]
+====
+
+This feature is available in Rancher v2.7.2 and later.
+====
+
+
+You can use `machineSelectorFiles` to deliver the audit policy file to the control plane nodes, and `machineGlobalConfig` to set the options on kube-apiserver.
+
+As a prerequisite, you must create a xref:security/secrets-hub.adoc[secret] or xref:cluster-admin/kubernetes-resources/configmaps.adoc[configmap] to be the source of the audit policy.
+
+The secret or configmap must meet the following requirements:
+
+. It must be in the `fleet-default` namespace where the Cluster object exists.
+. It must have the annotation `rke.cattle.io/object-authorized-for-clusters: <cluster-name1>,<cluster-name2>` which permits the target clusters to use it.
+
+[TIP]
+====
+
+Rancher Dashboard provides an easy-to-use form for creating the secret or configmap.
+====
+
+
+Example:
+
+[,yaml]
+----
+apiVersion: v1
+data:
+  audit-policy: >-
+    IyBMb2cgYWxsIHJlcXVlc3RzIGF0IHRoZSBNZXRhZGF0YSBsZXZlbC4KYXBpVmVyc2lvbjogYXVkaXQuazhzLmlvL3YxCmtpbmQ6IFBvbGljeQpydWxlczoKLSBsZXZlbDogTWV0YWRhdGE=
+kind: Secret
+metadata:
+  annotations:
+    rke.cattle.io/object-authorized-for-clusters: cluster1
+  name: <name1>
+  namespace: fleet-default
+----
+
+Enable and configure the audit log by editing the cluster in YAML, and utilizing the `machineSelectorFiles` and `machineGlobalConfig` directives.
+
+Example:
+
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      kube-apiserver-arg:
+        - audit-policy-file=<customized-path>/dev-audit-policy.yaml
+        - audit-log-path=<customized-path>/dev-audit.logs
+    machineSelectorFiles:
+      - fileSources:
+          - configMap:
+              name: ''
+            secret:
+              items:
+                - key: audit-policy
+                  path: <customized-path>/dev-audit-policy.yaml
+              name: dev-audit-policy
+        machineLabelSelector:
+          matchLabels:
+            rke.cattle.io/control-plane-role: 'true'
+----
+
+[TIP]
+====
+
+You can also use the directive `machineSelectorConfig` with proper machineLabelSelectors to achieve the same effect.
+====
+
+
+For more information about cluster configuration, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference] pages.
+--
 
 Tab K3s::
 +
-:::note This feature is available in Rancher v2.7.2 and later. ::: You can use `machineSelectorFiles` to deliver the audit policy file to the control plane nodes, and `machineGlobalConfig` to set the options on kube-apiserver. As a prerequisite, you must create a [secret](../../security/serets-hub.md) or [configmap](../../cluster-admin/kubernetes-resources/configmaps.md) to be the source of the audit policy. The secret or configmap must meet the following requirements: 1. It must be in the `fleet-default` namespace where the Cluster object exists. 2. It must have the annotation `rke.cattle.io/object-authorized-for-clusters: +++<cluster-name1>+++,+++<cluster-name2>+++` which permits the target clusters to use it. :::tip Rancher Dashboard provides an easy-to-use form for creating the [secret](../../security/serets-hub.md) or [configmap](../../cluster-admin/kubernetes-resources/configmaps.md). ::: Example: ```yaml apiVersion: v1 data: audit-policy: >- IyBMb2cgYWxsIHJlcXVlc3RzIGF0IHRoZSBNZXRhZGF0YSBsZXZlbC4KYXBpVmVyc2lvbjogYXVkaXQuazhzLmlvL3YxCmtpbmQ6IFBvbGljeQpydWxlczoKLSBsZXZlbDogTWV0YWRhdGE= kind: Secret metadata: annotations: rke.cattle.io/object-authorized-for-clusters: cluster1 name: +++<name1>+++namespace: fleet-default ``` Enable and configure the audit log by editing the cluster in YAML, and utilizing the `machineSelectorFiles` and `machineGlobalConfig` directives. Example: ```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster spec: rkeConfig: machineGlobalConfig: kube-apiserver-arg: - audit-policy-file=+++<customized-path>+++/dev-audit-policy.yaml - audit-log-path=+++<customized-path>+++/dev-audit.logs machineSelectorFiles: - fileSources: - configMap: name: '' secret: items: - key: audit-policy path: +++<customized-path>+++/dev-audit-policy.yaml name: dev-audit-policy machineLabelSelector: matchLabels: rke.cattle.io/control-plane-role: 'true' ``` :::tip You can also use the directive `machineSelectorConfig` with proper machineLabelSelectors to achieve the same effect. ::: For more information about cluster configuration, refer to the [K3s cluster configuration reference](../../cluster-deployment/configuration/k3s.md) pages.  
+--
+
+[NOTE]
+====
+
+This feature is available in Rancher v2.7.2 and later.
+====
+
+
+You can use `machineSelectorFiles` to deliver the audit policy file to the control plane nodes, and `machineGlobalConfig` to set the options on kube-apiserver.
+
+As a prerequisite, you must create a xref:security/secrets-hub.adoc[secret] or xref:cluster-admin/kubernetes-resources/configmaps.adoc[configmap] to be the source of the audit policy.
+
+The secret or configmap must meet the following requirements:
+
+. It must be in the `fleet-default` namespace where the Cluster object exists.
+. It must have the annotation `rke.cattle.io/object-authorized-for-clusters: <cluster-name1>,<cluster-name2>` which permits the target clusters to use it.
+
+[TIP]
+====
+
+Rancher Dashboard provides an easy-to-use form for creating the xref:security/secrets-hub.adoc[secret] or xref:cluster-admin/kubernetes-resources/configmaps.adoc[configmap].
+====
+
+
+Example:
+
+[,yaml]
+----
+apiVersion: v1
+data:
+  audit-policy: >-
+    IyBMb2cgYWxsIHJlcXVlc3RzIGF0IHRoZSBNZXRhZGF0YSBsZXZlbC4KYXBpVmVyc2lvbjogYXVkaXQuazhzLmlvL3YxCmtpbmQ6IFBvbGljeQpydWxlczoKLSBsZXZlbDogTWV0YWRhdGE=
+kind: Secret
+metadata:
+  annotations:
+    rke.cattle.io/object-authorized-for-clusters: cluster1
+  name: <name1>
+  namespace: fleet-default
+----
+
+Enable and configure the audit log by editing the cluster in YAML, and utilizing the `machineSelectorFiles` and `machineGlobalConfig` directives.
+
+Example:
+
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+spec:
+  rkeConfig:
+    machineGlobalConfig:
+      kube-apiserver-arg:
+        - audit-policy-file=<customized-path>/dev-audit-policy.yaml
+        - audit-log-path=<customized-path>/dev-audit.logs
+    machineSelectorFiles:
+      - fileSources:
+          - configMap:
+              name: ''
+            secret:
+              items:
+                - key: audit-policy
+                  path: <customized-path>/dev-audit-policy.yaml
+              name: dev-audit-policy
+        machineLabelSelector:
+          matchLabels:
+            rke.cattle.io/control-plane-role: 'true'
+----
+
+[TIP]
+====
+
+You can also use the directive `machineSelectorConfig` with proper machineLabelSelectors to achieve the same effect.
+====
+
+
+For more information about cluster configuration, refer to the xref:cluster-deployment/configuration/k3s.adoc[K3s cluster configuration reference] pages.
+--
 
 Tab RKE1::
 +
-The audit log can be enabled and configured by editing the cluster with YAML. When the audit log is enabled, RKE1 default values will be applied. ```yaml # # Rancher Config # rancher_kubernetes_engine_config: services: kube-api: audit_log: enabled: true ``` You can customize the audit log by using the configuration directive. ```yaml # # Rancher Config # rancher_kubernetes_engine_config: services: kube-api: audit_log: enabled: true configuration: max_age: 6 max_backup: 6 max_size: 110 path: /var/log/kube-audit/audit-log.json format: json policy: apiVersion: audit.k8s.io/v1 # This is required. kind: Policy omitStages: - "RequestReceived" rules: # Log pod changes at RequestResponse level - level: RequestResponse resources: - group: "" # Resource "pods" doesn't match requests to any subresource of pods, # which is consistent with the RBAC policy. resources: ["pods"] # Log "pods/log", "pods/status" at Metadata level - level: Metadata resources: - group: "" resources: ["pods/log", "pods/status"] ``` For configuration details, refer to the official [RKE1 documentation](https://rke.docs.rancher.com/config-options/audit-log). 
-======</customized-path>++++++</customized-path>++++++</customized-path>++++++</name1>++++++</cluster-name2>++++++</cluster-name1></customized-path>++++++</customized-path>++++++</customized-path>++++++</name1>++++++</cluster-name2>++++++</cluster-name1>
+--
+The audit log can be enabled and configured by editing the cluster with YAML.
+
+When the audit log is enabled, RKE1 default values will be applied.
+
+[,yaml]
+----
+#
+# Rancher Config
+#
+rancher_kubernetes_engine_config:
+  services:
+    kube-api:
+      audit_log:
+        enabled: true
+----
+
+You can customize the audit log by using the configuration directive.
+
+[,yaml]
+----
+#
+# Rancher Config
+#
+rancher_kubernetes_engine_config:
+  services:
+    kube-api:
+      audit_log:
+        enabled: true
+        configuration:
+          max_age: 6
+          max_backup: 6
+          max_size: 110
+          path: /var/log/kube-audit/audit-log.json
+          format: json
+          policy:
+            apiVersion: audit.k8s.io/v1 # This is required.
+            kind: Policy
+            omitStages:
+              - "RequestReceived"
+            rules:
+              # Log pod changes at RequestResponse level
+              - level: RequestResponse
+                resources:
+                  - group: ""
+                    # Resource "pods" doesn't match requests to any subresource of pods,
+                    # which is consistent with the RBAC policy.
+                    resources: ["pods"]
+              # Log "pods/log", "pods/status" at Metadata level
+              - level: Metadata
+                resources:
+                  - group: ""
+                    resources: ["pods/log", "pods/status"]
+----
+
+For configuration details, refer to the official https://rke.docs.rancher.com/config-options/audit-log[RKE1 documentation].
+--
 ======
